--- a/pages/options.html
+++ b/pages/options.html
@@ -128,6 +128,10 @@
             <label class="switch"><input type="checkbox" id="matchType"><span class="slider"></span></label>
             <span class="switch-label">正则</span>
           </div>
+          <div class="switch-group" style="margin-left: 24px;">
+            <span class="switch-label">CORS</span>
+            <label class="switch"><input type="checkbox" id="corsEnabled"><span class="slider"></span></label>
+          </div>
         </div>
         <div class="modal-row">
           <label class="modal-label">名称:</label>
